[gd_scene load_steps=17 format=3 uid="uid://dnjk18na4sq4b"]

[ext_resource type="Script" path="res://Scripts/Environment/BG.gd" id="1_esl4a"]
[ext_resource type="Script" path="res://Scenes/StageOne.gd" id="1_oiyt2"]
[ext_resource type="Texture2D" uid="uid://wubjj38oak5b" path="res://Assets/back.png" id="2_g8k4e"]
[ext_resource type="PackedScene" uid="uid://bkex7j6m7a446" path="res://Scripts/Enemy/type1.tscn" id="3_4lwq5"]
[ext_resource type="PackedScene" uid="uid://13403nykthj8" path="res://Scripts/Enemy/type2.tscn" id="3_63d3q"]
[ext_resource type="Texture2D" uid="uid://ds0xgatxquywp" path="res://Assets/Pixel UI pack 3/04.png" id="3_w6px1"]
[ext_resource type="PackedScene" uid="uid://b4md168m664xl" path="res://Scripts/Enemy/type3.tscn" id="4_ngx3i"]
[ext_resource type="PackedScene" uid="uid://b5f8vpqafyeaa" path="res://Scenes/Player/player.tscn" id="5_650px"]
[ext_resource type="PackedScene" uid="uid://71x7rr26fjou" path="res://Scenes/pause_menu.tscn" id="7_xpqh7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5j10q"]
size = Vector2(552, 161.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avkwk"]
size = Vector2(97, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lll8"]
size = Vector2(656, 400)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_k0iy1"]
a = Vector2(15, 315)
b = Vector2(15, 145)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ykku4"]
a = Vector2(569, 317)
b = Vector2(569, 147)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_p75h0"]
a = Vector2(13, 313)
b = Vector2(572, 313)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_upbr8"]
a = Vector2(10, 149)
b = Vector2(572, 149)

[node name="StageOne" type="Node2D"]
script = ExtResource("1_oiyt2")
enemies = Array[PackedScene]([ExtResource("3_4lwq5"), ExtResource("3_63d3q"), ExtResource("4_ngx3i")])

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(97.132, 30.25)
scale = Vector2(2.5, 1.735)
texture = ExtResource("3_w6px1")
hframes = 7
vframes = 15

[node name="Fill" type="Sprite2D" parent="HealthBar"]
texture = ExtResource("3_w6px1")
hframes = 7
vframes = 15
frame = 8

[node name="BG" type="ParallaxBackground" parent="."]
script = ExtResource("1_esl4a")

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG"]
position = Vector2(89, 45)
motion_mirroring = Vector2(700, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer"]
position = Vector2(261, 127)
scale = Vector2(1.82292, 1.4375)
texture = ExtResource("2_g8k4e")
metadata/_edit_lock_ = true

[node name="EnemySpawnClock" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="PlayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayArea"]
position = Vector2(292, 231.25)
shape = SubResource("RectangleShape2D_5j10q")

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2(600, 208)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2(80, 23)
shape = SubResource("RectangleShape2D_avkwk")

[node name="Despawn" type="Area2D" parent="."]
position = Vector2(-48, 208)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawn"]
position = Vector2(344, -32)
shape = SubResource("RectangleShape2D_2lll8")
metadata/_edit_lock_ = true

[node name="player" parent="." instance=ExtResource("5_650px")]
position = Vector2(128, 208)

[node name="PauseButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 16.0
offset_right = 32.0
offset_bottom = 48.0

[node name="PauseMenu" parent="." instance=ExtResource("7_xpqh7")]
z_index = 10
offset_left = 256.0
offset_top = 136.0
offset_right = 256.0
offset_bottom = 136.0

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("SegmentShape2D_k0iy1")

[node name="RightWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("SegmentShape2D_ykku4")

[node name="Ceiling" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Ceiling"]
shape = SubResource("SegmentShape2D_p75h0")

[node name="Floor" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Floor"]
shape = SubResource("SegmentShape2D_upbr8")

[connection signal="timeout" from="EnemySpawnClock" to="." method="_on_enemy_spawn_clock_timeout"]
[connection signal="body_exited" from="Despawn" to="." method="_on_despawn_body_exited"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
